src/sections/about/about.module.scss
@use '@/styles/mixins' as *;

.container {
  width: 100%;
  padding: 6rem var(--container__padding-horizontal);
  min-height: min(70rem, 100vh);
  display: flex;
  align-items: center;

  @include breakpoint('xxl') {
    min-height: 50vh;
  }

  .wrapper {
    position: relative;
    max-width: var(--container__max-width);
    margin: 0 auto;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 6.4rem;
    height: 100%;

    @include breakpoint('lg') {
      gap: 6.4rem;
      flex-direction: row-reverse;
    }
  }

  .avatar {
    width: 25rem;
    height: 25rem;
    background-color: gray;
    background-size: cover;
    background-position: center;
    border-radius: 50%;
    overflow: hidden;
    
    > img {
      max-height: 100%;
    }
    
    &-wrapper {
      position: relative;
      
      @include breakpoint('lg') {
        flex: 0 0 auto;
  
        &:before {
          content: '';
          display: block;
          width: 30rem;
          height: 30rem;
          background-image: url('@/assets/sypialnia2.webp');
          background-size: cover;
          background-position: center;
          border-radius: 50%;
          position: absolute;
          top: 20%;
          left: 20%;
          z-index: -1;
        }
      }
    }


  }

  .text {
    font-size: 1.8rem;
    font-weight: 300;
    color: white;
    margin: 0;
    line-height: 120%;
    max-width: 60ch;

    @include breakpoint('lg') {
      font-size: 2.4rem;
    }
  }
}

